--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.0
   provider: ^6.1.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/designs/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
